--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,6 @@ install:
   - java -jar ./artifacts/app-card-delivery.jar &
 
 build_script:
-  - ./gradlew test --info -Dselenide.headless=true
+  - ./gradlew test --info -Selenide.headless=true
   - chmod +x gradlew
   - ./gradlew test --info
