--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,5 +12,5 @@ install:
   - java -jar ./artifacts/app-card-delivery.jar &
 
 build_script:
-  - ./gradlew test --info -Selenide.headless=true
+  - ./gradlew test --info -Dselenide.headless=true
   - chmod +x gradlew
